# Food-ordering-system

./: .cursorrules  .env  .env.example  .env.local  .eslintrc.json  .gitignore  ARCHITECTURE.md  AUTH_IMPLEMENTATION.md  CONTRIBUTING.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_REPORT.md  LICENSE  PHASE_1_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  TODO.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  setup.sh  tailwind.config.ts  vite.config.ts
apps/api/: Dockerfile  config.py  main.py  models.py
apps/api/routes/: auth.py  clips.py  exports.py  videos.py
apps/web/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
src/: App.tsx  index.css
src/components/: AppLayout.tsx  AppSidebar.tsx  CategoryCircle.tsx  ErrorBoundary.tsx  FoodDelivery3D.tsx  Header.tsx  RestaurantCard.tsx
src/components/ui/: button.tsx  sidebar-demo.tsx  sidebar-mini.tsx  spline.tsx
src/contexts/: AuthContext.tsx  CartContext.tsx  LocationContext.tsx
src/data/: menus.ts  restaurants.ts
src/pages/: Cart.tsx  Favorites.tsx  Home.tsx  Login.tsx  Orders.tsx  Profile.tsx  Restaurant.tsx  Search.tsx  Signup.tsx
src/utils/: clearStorage.ts
supabase/: config.toml
