[project]
name = "viralvibe-api"
version = "1.0.0"
description = "ViralVibe FastAPI Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.0",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.0",
    "asyncpg==0.29.0",
    "celery==5.3.0",
    "redis==5.0.0",
    "supabase==2.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "boto3==1.34.0",
    "modal==0.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "ruff==0.1.9",
    "mypy==1.7.1",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
